# crate-libc

./: .gitignore  CMakeLists.txt  README.md  configure.ac
cmake/: FindCheck.cmake
src/: CMakeLists.txt  Makefile.am  StreamInput.c  StreamOutput.c  byte_reader.c  byte_reader.h  crate.h  crate_common.c  crate_common.h  crate_conn.c  crate_conn.h  crate_request.c  crate_request.h  crate_response.c  crate_response.h  debug.h  libcrate_test  main.c  streaming.h
tests/: CMakeLists.txt  Makefile.am  check_streaming.c
